# opengl-tutorial

./: .gitignore  3  CMakeLists.txt  exec.bat
.cache/clangd/index/: Shader.cpp.4C574089E95B005B.idx  Shader.cpp.69E26C3021B6AE3A.idx  Shader.h.CFEE4E34EB16CB2D.idx  Shader.hpp.7CAA81D9FBCAC7F8.idx  Shader.hpp.FFF6F5E651B53D2E.idx  _fixes.hpp.79CBC173A5CAC31D.idx  _vectorize.hpp.42F74545BEDC245F.idx  common.hpp.8126ABB3F8A6F58C.idx  compute_common.hpp.AD8B84700548B6AD.idx  compute_vector_relational.hpp.F96ED910238A8A40.idx  constants.hpp.BC79C8EC29AEF988.idx  constants.inl.703FD5CB74386E78.idx  epsilon.hpp.6BB1F0EA618FD773.idx  epsilon.inl.42EC7D33C1340D94.idx  exponential.hpp.0EBEC8C6395449A0.idx  func_common.inl.F2D1552FB2F06E6A.idx  func_exponential.inl.3FD8ED2EC606B898.idx  func_geometric.inl.E507BBD0C2768B13.idx  func_integer.inl.C0F400179020DBBC.idx  func_matrix.inl.5026E53F4E4455CA.idx  func_packing.inl.E1202F7E3D7827AE.idx  func_trigonometric.inl.E9B2B1A63B4D1F9C.idx  func_vector_relational.inl.E98050352388D5D2.idx  fwd.hpp.A2E3ACA4A489BEA2.idx  geometric.hpp.CB04D43B7C8F54A3.idx  glad.c.534DC79ABC0CE045.idx  glad.c.D88C2E17E9E13A20.idx  glad.c.EF395AD410A18701.idx  glad.h.5F91EB55323019F4.idx  glad.h.9A4818D8A02E99FE.idx  glad.h.ED3669B627B2AD41.idx  glm.hpp.6243173DB61AFE04.idx  integer.hpp.D9BDA6260B30E2D0.idx  khrplatform.h.040084FFE28DF258.idx  khrplatform.h.7455D5FBC5E314A7.idx  khrplatform.h.D4CB2923B44E44BA.idx  main.cpp.925021D3F167ECF6.idx  main.cpp.B339B6E63C157911.idx  main.cpp.CE64E95D5A7F5A36.idx  mat2x2.hpp.11C7673671847F4E.idx  (+162 more)
includes/assimp/: revision.h
shaders/: colors.fs  colors.vs  shader.fs  shader.vs
src/: 2  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.hpp  main.cpp
